--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -14,11 +14,13 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/material-top-tabs": "^6.6.4",
-    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
-    "expo": "~49.0.13",
+    "expo": "~49.0.15",
     "expo-checkbox": "^2.5.0",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
@@ -28,11 +30,11 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-onboarding-swiper": "^1.2.0",
-    "react-native-paper": "^5.10.6",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swipe-list-view": "^2.0.0",
