--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "expo": "~49.0.15",
     "expo-checkbox": "^2.5.0",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^3.1.2",
     "mime": "^3.0.0",
@@ -32,6 +33,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "^1.8.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "^3.3.0",
